Fixed modal tabs

--- a/entradas_com/app/templates/base.html
+++ b/entradas_com/app/templates/base.html
@@ -15,11 +15,11 @@
 	    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
 	    <!-- Custom CSS -->
-	    <link href="{{ url_for('static', filename='css/global.css') }}" rel="stylesheet">
-	    <link href="{{ url_for('static', filename='css/navbar.css') }}" rel="stylesheet">
-	    <link href="{{ url_for('static', filename='css/header-carousel.css') }}" rel="stylesheet">
-	    <link href="{{ url_for('static', filename='css/searchbar.css') }}" rel="stylesheet">
-	    <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='css/custom/global.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
+	    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
 
 	    <!-- Custom Fonts -->
 	    <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
