--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -14,47 +14,20 @@
         <!-- Bootstrap Core CSS -->
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
-
         <!-- uikit CSS -->
-        <link href="{{ url_for('static', filename='css/uk-flex.css') }}" rel="stylesheet">
-       
+        <link href="{{ url_for('static', filename='css/uikit/uk-flex.css') }}" rel="stylesheet">
+
         <!-- Custom Fonts -->
         <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
 
         <!-- Custom CSS -->
-            <link href="{{ url_for('static', filename='css/global.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/navbar.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/header-carousel.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/searchbar.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/search-results.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/search-cards.css') }}" rel="stylesheet">
-
-
-        
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-            <!-- jQuery -->
-        <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-
-        <!-- Bootstrap Core JavaScript -->
-        <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-        
-        <!-- UIkit -->
-        <script src="{{ url_for('static', filename='js/uikit.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/components/sticky.min.js') }}"></script>
-
-        <!-- own JavaScript -->
-        <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/search-results.js') }}"></script>
-
-
+        <link href="{{ url_for('static', filename='css/custom/global.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/search-results.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/search-cards.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
 
 </head>
 
@@ -314,6 +287,20 @@
             <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Leganés</p>
         </div>
     </footer>
+
+    <!-- jQuery -->
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+    <!-- UIkit -->
+    <script src="{{ url_for('static', filename='js/uikit.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/components/sticky.min.js') }}"></script>
+
+    <!-- own JavaScript -->
+    <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/search-results.js') }}"></script>
 
 </body>
 
