--- a/entradas_com/app/static/css/custom/search-results.css
+++ b/entradas_com/app/static/css/custom/search-results.css
@@ -1,8 +1,8 @@
-header.carousel {
+#header-carousel {
     height: 30%;
 }
 
-#search-container{
+.search-container{
     top:15%;
     width: 90%;
 }
@@ -10,8 +10,25 @@ header.carousel {
 /* Filter bar */
 
 #filter-bar {
+    border: none;
     margin: 10px auto;
     z-index: 100;
+}
+
+#filter-date {
+    width: 100%;
+}
+
+.filter-btn{
+    padding-left: 10px;
+    background-color: rgb(255, 180, 2);
+}
+.filter-btn:hover{
+    background-color: rgb(218,218,218)
+}
+
+.searchbar-text {
+    color: black;
 }
 
 
