--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -11,49 +11,29 @@
 	    <meta name="description" content="">
 	    <meta name="author" content="">
 
+        <!-- CSS -->
+
 	    <!-- Bootstrap Core CSS -->
         <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
-
         <!-- uikit CSS -->
-        <link href="{{ url_for('static', filename='css/uk-flex.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/uk-overlay.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/uk-position.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/uk-text.css') }}" rel="stylesheet">
-        
+        <link href="{{ url_for('static', filename='css/uikit/uk-flex.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/uikit/uk-overlay.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/uikit/uk-position.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/uikit/uk-text.css') }}" rel="stylesheet">
+
         <!-- Custom Fonts -->
         <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
 
         <!-- Custom CSS -->
-            <link href="{{ url_for('static', filename='css/global.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/navbar.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/header-carousel.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/searchbar.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/footer.css') }}" rel="stylesheet">
-            <link href="{{ url_for('static', filename='css/home-categories.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/global.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/home-categories.css') }}" rel="stylesheet">
 
 
-        
-
-        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-        <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-        <![endif]-->
-
-            <!-- jQuery -->
-        <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-
-        <!-- Bootstrap Core JavaScript -->
-        <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-        
-        <!-- UIkit -->
-        <script src="{{ url_for('static', filename='js/uikit.min.js') }}"></script>
-        <script src="{{ url_for('static', filename='js/components/sticky.min.js') }}"></script>
-
-        <!-- own JavaScript -->
-        <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
 
 	</head>
 	<body>
@@ -250,7 +230,7 @@
                     </div>
                 </div>
             </div>
-        
+
 
 
         </div>
@@ -331,6 +311,20 @@
             <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Leganés</p>
         </div>
     </footer>
+
+    <!-- JS -->
+
+    <!-- jQuery -->
+    <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+
+    <!-- UIkit -->
+    <script src="{{ url_for('static', filename='js/uikit.min.js') }}"></script>
+
+    <!-- own JavaScript -->
+    <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
 
 {% endblock %}
 	</body>
