indentation and a little of pagination

--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -177,7 +177,7 @@
     </form>
     <!-- Header Carousel -->
 
-    <header id="myCarousel" class="carousel slide">
+    <header id="header-carousel" class="carousel slide">
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
