--- a/entradas_com/app/templates/search/search-results.html
+++ b/entradas_com/app/templates/search/search-results.html
@@ -2,33 +2,32 @@
 <html lang="es">
 
 <html>
-    <head>
-        <title>Entradas.com - {{ query }}</title>
+<head>
+    <title>Entradas.com - {{ query }}</title>
 
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <!-- Bootstrap Core CSS -->
-        <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <!-- Bootstrap Core CSS -->
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
 
-        <!-- uikit CSS -->
-        <link href="{{ url_for('static', filename='css/uikit/uk-flex.css') }}" rel="stylesheet">
+    <!-- uikit CSS -->
+    <link href="{{ url_for('static', filename='css/uikit/uk-flex.css') }}" rel="stylesheet">
 
-        <!-- Custom Fonts -->
-        <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
+    <!-- Custom Fonts -->
+    <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
 
-        <!-- Custom CSS -->
-        <link href="{{ url_for('static', filename='css/custom/global.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/custom/search-results.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/custom/search-cards.css') }}" rel="stylesheet">
-        <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
-
+    <!-- Custom CSS -->
+    <link href="{{ url_for('static', filename='css/custom/global.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/header-carousel.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/searchbar.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/search-cards.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/custom/search-results.css') }}" rel="stylesheet">
 </head>
 
 
@@ -79,7 +78,7 @@
     <div class="modal fade" id="signup-modal" tabindex="-1" role="dialog" aria-labelledby="signup-dialog">
         <div class="modal-dialog" role="document">
 
-        <!-- Modal content-->
+            <!-- Modal content-->
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -150,36 +149,35 @@
 
     <!-- Search bar -->
 
-<!-- Search bar -->
     <form action="{{ url_for('search.search') }}" type="search" method="post" name="Search">
         <div id='search-container' class="container input-group">
             <div class="input-group-btn">
             <button id='dropbtn' type="button" class="btn btn-default dropdown-toggle searchbtn dropbtn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-question fa-lg fa-fw" aria-hidden="true"></i> <span class="caret"></span></button>
                 <ul class="dropdown-menu search-dropdown-menu">
-                  <li><a href="#" onclick="dropdown(1);"><i class="fa fa-ticket fa-lg fa-fw"></i> Cine </a></li>
-                  <li><a href="#" onclick="dropdown(2);"><img src="{{ url_for('static', filename='img/theater.png') }}" style="width:18px"> &nbsp; Teatro </a></li>
-                  <li><a href="#" onclick="dropdown(3);"><i class="fa fa-music fa-lg fa-fw"></i> Conciertos </a></li>
-                  <li><a href="#" onclick="dropdown(4);"><i class="fa fa-university fa-lg fa-fw"></i> Exposiciones/Museos </a></li>
-                  <li><a href="#" onclick="dropdown(5);"><i class="fa fa-futbol-o fa-lg fa-fw"></i> Deportes </a></li>
-                  <li><a href="#" onclick="dropdown(6);"><i class="fa fa-magic fa-lg fa-fw" aria-hidden="true"></i> Shows/Espectáculos </a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#" onclick="dropdown(0);"><i class="fa fa-globe fa-lg fa-fw"></i> Todas las categorías</a></li>
+                    <li><a href="#" onclick="dropdown(1);"><i class="fa fa-ticket fa-lg fa-fw"></i> Cine </a></li>
+                    <li><a href="#" onclick="dropdown(2);"><img src="{{ url_for('static', filename='img/theater.png') }}" style="width:18px"> &nbsp; Teatro </a></li>
+                    <li><a href="#" onclick="dropdown(3);"><i class="fa fa-music fa-lg fa-fw"></i> Conciertos </a></li>
+                    <li><a href="#" onclick="dropdown(4);"><i class="fa fa-university fa-lg fa-fw"></i> Exposiciones/Museos </a></li>
+                    <li><a href="#" onclick="dropdown(5);"><i class="fa fa-futbol-o fa-lg fa-fw"></i> Deportes </a></li>
+                    <li><a href="#" onclick="dropdown(6);"><i class="fa fa-magic fa-lg fa-fw" aria-hidden="true"></i> Shows/Espectáculos </a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#" onclick="dropdown(0);"><i class="fa fa-globe fa-lg fa-fw"></i> Todas las categorías</a></li>
+                </ul>
             </div>
             <input id="search-input-text" name="query" type="text" class="form-control searchbar searchbar-text" placeholder="Busca espectáculos aquí" aria-label="search-terms" onkeydown="setDefaultDrop()" method="post">
-                <div class="input-group-btn">
-                    <a href="search-results.html">
-                        <button id="searchnow" class="btn btn-default searchbtn sendsearchbtn" type="Submit">
-                            <i class="fa fa-search"></i>
-                        </button>
-                    </a>
-                </div>
-
+            <div class="input-group-btn">
+                <a href="search-results.html">
+                    <button id="searchnow" class="btn btn-default searchbtn sendsearchbtn" type="Submit">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </a>
+            </div>
         </div>
     </form>
 
- <!-- Header Carousel -->
+    <!-- Header Carousel -->
 
-    <header id="myCarousel" class="carousel slide">
+    <header id="header-carousel" class="carousel slide">
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
@@ -194,7 +192,6 @@
             </div>
         </div>
     </header>
-
 
     <!-- Filter bar -->
 
@@ -212,10 +209,10 @@
         </div>
     </div>
 
-
     <!-- Cards -->
+
     <div class="container">
-    {% for event in events %}
+    {% for i in range(8) %}
 
 
     <div class="col-sm-6 col-md-6 card" tabindex="-1">
@@ -226,12 +223,12 @@
                 </a>
             </div>
             <div class="media-body">
-                <h4 class="media-heading card-body">{{ event.title }}</h4>
+                <h4 class="media-heading card-body">{{ events[i].title }}</h4>
                 <p class="card-body">
-                    <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>{{ event.duration }} min.
+                    <i class="fa fa-clock-o fa-fw" aria-hidden="true"></i>{{ events[i].duration }} min.
                     <i class="fa fa-ticket fa-fw" aria-hidden="true"></i>Aventura
                     <i class="fa fa-birthday-cake fa-fw" aria-hidden="true"></i>16+
-                    <i class="fa fa-money fa-fw" aria-hidden="true"></i>Desde {{event.price}}€
+                    <i class="fa fa-money fa-fw" aria-hidden="true"></i>Desde {{events[i].price}}€
                 </p>
                 <p class="card-body">
                     <a href="#" class="btn btn-warning" role="button">Información + Comprar entradas</a>
@@ -242,28 +239,31 @@
 
     {% endfor %}
     </div>
+
     <!--Pagination-->
 
-        <nav style="text-align:center; display:block; margin-top:20px">
-          <ul class="pagination pagination-lg">
-            <li>
-              <a href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-              </a>
-            </li>
-            <li class="disabled"><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li>
-              <a href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
+    <nav style="text-align:center; display:block; margin-top:20px">
+      <ul class="pagination pagination-lg">
+        <li>
+          <a href="#" aria-label="Previous">
+            <span aria-hidden="true">&laquo;</span>
+          </a>
+        </li>
+        <li class="disabled"><a href="#">1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">4</a></li>
+        <li><a href="#">5</a></li>
+        <li>
+          <a href="#" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+
     <!-- Footer -->
+
     <footer class="footer" style="margin-top:30px">
         <div class="row row-mod" align="center">
           <div class="col-lg-4" style="margin-top:0px">
