--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -90,7 +90,7 @@
                     <h4 class="modal-title">Sólo a un paso de las mejores condiciones</h4>
                 </div>
                 <div class="modal-body">
-                    <ul class="nav nav-pills">
+                    <ul class="nav nav-tabs">
                         <!-- Sign up tab-->
                         <li id="signup-tab" class="active">
                             <a href="#" class="signup-link">Sign up</a>
@@ -103,44 +103,57 @@
 
                     <!-- When signing in -->
                     <form action="{{ url_for('main.signup') }}" type="signup" id="signup-form" class="signup-field" role="form" method="post" name="Signup">
-                        <div class="form-group">
+                        <div id="sign-mail-div" class="form-group has-feedback">
                             <label for="email">Email:</label>
-                            <input id="sign-mail" name="email "type="email" class="form-control" id="email" onchange="validate(self.id)">
+                            <input id="sign-mail" name="email "type="email" class="form-control" id="email" onchange="validate(0, this.id)" aria-describedby="inputSuccessStatus">
+                            <span id="sign-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccessStatus" class="sr-only">(success)</span>
                         </div>
-                        <div class="form-group">
+                        <div id="sign-usr-div" class="form-group has-feedback">
                             <label for="email">Usuario:</label>
-                            <input id="sign-usr" name="username" type="text" class="form-control" id="email" onchange="validate(self.id)">
+                            <input id="sign-usr" name="username" type="text" class="form-control" id="email" onchange="validate(1, this.id)" aria-describedby="inputSuccess1Status">
+                            <span id="sign-usr-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess1Status" class="sr-only">(success)</span>
                         </div>
-                        <div class="form-group">
+                        <div id="sign-pwd-div" class="form-group has-feedback">
                             <label for="pwd">Contraseña:</label>
-                            <input id="sign-pwd" name="password" type="password" class="form-control" id="pwd" onchange="validate(self.id)">
+                            <input id="sign-pwd" name="password" type="password" class="form-control" id="pwd" onchange="validate(2, this.id)" aria-describedby="inputSuccess2Status">
+                            <span id="sign-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess2Status" class="sr-only">(success)</span>
                         </div>
-                        <div class="form-group">
+                        <div id="sign-pwd-confirm-div" class="form-group has-feedback">
                             <label for="pwd-confirm">Confirmar contraseña:</label>
-                            <input id="sign-pwd-confirm" name="password" type="password" class="form-control" id="pwd-confirm" onchange="validate(self.id)">
+                            <input id="sign-pwd-confirm" name="password" type="password" class="form-control" id="pwd-confirm" onchange="validate(3, this.id)" aria-describedby="inputSuccess3Status">
+                            <span id="sign-pwd-confirm-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess3Status" class="sr-only">(success)</span>
                         </div>
                         <div class="checkbox">
                             <label><input type="checkbox">Recuérdame</label>
                         </div>
-                        <button type="Submit" class="btn btn-success login signup-field" data-dismiss="modal">
+                        <button type="Submit" class="btn btn-success login signup-field" data-dismiss="modal" style="margin-left:34em">
                             <span class="glyphicon glyphicon-user"></span> Sign Up
+                            
                         </button>
                     </form>
 
                     <!-- When logging in -->
                     <form action="{{ url_for('main.login') }}" type="login" id="login-form" class="login-field" role="form" method="post" name="Login">
-                        <div class="form-group">
-                            <label for="email">Usuario o email:</label>
-                            <input name="email" type="email" class="form-control" id="email">
+                        <div id="login-mail-div" class="form-group has-feedback">
+                            <label for="email">Email:</label>
+                            <input name="email" type="email" class="form-control" id="login-email" onchange="login(0, this.id)" aria-describedby="inputSuccess4Status">
+                            <span id="login-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess4Status" class="sr-only">(success)</span>
                         </div>
-                        <div class="form-group">
-                            <label for="pwd">Password:</label>
-                            <input name="password" type="password" class="form-control" id="pwd">
+                        <div id="login-pwd-div" class="form-group has-feedback">
+                            <label for="pwd">Contraseña:</label>
+                            <input name="password" type="password" class="form-control" id="login-pwd" onchange="login(1, this.id)" aria-describedby="inputSuccess5Status">
+                            <span id="login-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess5Status" class="sr-only">(success)</span>
                         </div>
                         <div class="checkbox">
                             <label><input type="checkbox"> Recuérdame</label>
                         </div>
-                        <button type="Submit" class="btn btn-success login login-field" data-dismiss="modal">
+                        <button type="Submit" class="btn btn-success login login-field" data-dismiss="modal" style="margin-left:34em">
                             <span class="glyphicon glyphicon-log-in"></span> Log in
                         </button>
                     </form>
@@ -325,6 +338,9 @@
 
     <!-- own JavaScript -->
     <script src="{{ url_for('static', filename='js/entradas.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/login-signup.js') }}"></script>
+
+        
 
 {% endblock %}
 	</body>
