form send blocker WIP; TO-DO fix non changing button state

--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -153,7 +153,7 @@
                         <div class="checkbox">
                             <label><input type="checkbox"> Recuérdame</label>
                         </div>
-                        <button id="login-form-btn" type="Submit" class="btn btn-success login login-field" data-dismiss="modal" style="margin-left:34em" onclick="changename(1)">
+                        <button id="login-form-btn" type="Submit" class="btn btn-success login login-field" data-dismiss="modal" style="margin-left:34em" onclick="changename(1)" disabled>
                             <span class="glyphicon glyphicon-log-in"></span> Log in
                         </button>
                     </form>
