--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -59,8 +59,8 @@
 
                 <li>
                     <!-- Trigger the modal with a button -->
-                    <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop" data-toggle="modal" data-target="#signup-modal">
-                        <span class="glyphicon glyphicon-user"></span>Entrar
+                    <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop">
+                        <a href="../login-signup/login-signup.html"><span class="glyphicon glyphicon-user"></span>Entrar</a>
                     </button>
                 </li>
 
