There you are, Chris

--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -60,7 +60,7 @@
                 <li>
                     <!-- Trigger the modal with a button -->
                     <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop">
-                        <a href="../login-signup/login-signup.html"><span class="glyphicon glyphicon-user"></span>Entrar</a>
+                        <a href="{{ url_for('auth.signup') }}"><span class="glyphicon glyphicon-user"></span>Entrar</a>
                     </button>
                 </li>
 
