ADD pagina de login/registro

--- a/entradas_com/app/templates/auth/login-signup.html
+++ b/entradas_com/app/templates/auth/login-signup.html
@@ -18,6 +18,10 @@
 	    <!-- Custom CSS -->
 	    <link href="{{ url_for('static', filename='css/custom/global.css') }}" rel="stylesheet">
 	    <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/navbar.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/footer.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/login-signup.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='css/custom/bg-carousel.css') }}" rel="stylesheet">
 
 	    <!-- Custom Fonts -->
 	    <link href="{{ url_for('static', filename='font-awesome/css/font-awesome.min.css') }}" rel="stylesheet" type="text/css">
@@ -37,74 +41,121 @@
 	</head>
 	<body>
         
-		<!--tabs for login/signup-->
-        <div id="register-container">
-            <ul class="nav nav-tabs">
-                <li id="login-li" class="active"><a data-toggle="tab" href="#login-content">Log in</a></li>
-                <li id="signup-li"><a data-toggle="tab" href="#login-content">Sign up</a></li>
-            </ul>
-            <!--displayed stuff for each of tabs-->
-            <div class="tab-content">
-              <div id="login-content" class="tab-pane fade in active">
-                <form type="login" id="login-form" class="login-field" role="form" method="post" name="Login">
-                    <div id="login-mail-div" class="form-group has-feedback">
-                        <label for="email">Email o usuario:</label>
-                        <input name="email" type="email" class="form-control" id="login-email" onchange="login(0, this.id)" aria-describedby="inputSuccess4Status" required>
-                        <span id="login-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                        <span id="inputSuccess4Status" class="sr-only">(success)</span>
-                    </div>
-                    <div id="login-pwd-div" class="form-group has-feedback">
-                        <label for="pwd">Contraseña:</label>
-                        <input name="password" type="password" class="form-control" id="login-pwd" onchange="login(1, this.id)" aria-describedby="inputSuccess5Status" required>
-                        <span id="login-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                        <span id="inputSuccess5Status" class="sr-only">(success)</span>
-                    </div>
-                    <div class="checkbox">
-                        <label><input type="checkbox"> Recuérdame</label>
-                    </div>
-                    <button id="login-form-btn" type="Submit" class="btn btn-success login login-field" data-dismiss="modal" style="margin-left:34em" onclick="changename(1)" disabled>
-                        <span class="glyphicon glyphicon-log-in"></span> Log in
-                    </button>
-                </form> 
-              </div>
-              <div id="signup-content" class="tab-pane fade">
-                  <form action="{{ url_for('main.signup') }}" type="signup" id="signup-form" class="signup-field" role="form" method="post" name="Signup">
-                        <div id="sign-mail-div" class="form-group has-feedback">
-                            <label for="email">Email:</label>
-                            <input id="sign-mail" name="email "type="email" class="form-control" id="email" onchange="validate(0, this.id)" aria-describedby="inputSuccessStatus" required>
-                            <span id="sign-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                            <span id="inputSuccessStatus" class="sr-only">(success)</span>
-                        </div>
-                        <div id="sign-usr-div" class="form-group has-feedback">
-                            <label for="email">Usuario:</label>
-                            <input id="sign-usr" name="username" type="text" class="form-control" id="email" onchange="validate(1, this.id)" aria-describedby="inputSuccess1Status" required>
-                            <span id="sign-usr-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                            <span id="inputSuccess1Status" class="sr-only">(success)</span>
-                        </div>
-                        <div id="sign-pwd-div" class="form-group has-feedback">
-                            <label for="pwd">Contraseña:</label>
-                            <input id="sign-pwd" name="password" type="password" class="form-control" id="pwd" onchange="validate(2, this.id)" aria-describedby="inputSuccess2Status" required>
-                            <span id="sign-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                            <span id="inputSuccess2Status" class="sr-only">(success)</span>
-                        </div>
-                        <div id="sign-pwd-confirm-div" class="form-group has-feedback">
-                            <label for="pwd-confirm">Confirmar contraseña:</label>
-                            <input id="sign-pwd-confirm" name="password" type="password" class="form-control" id="pwd-confirm" onchange="validate(3, this.id)" aria-describedby="inputSuccess3Status" required>
-                            <span id="sign-pwd-confirm-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                            <span id="inputSuccess3Status" class="sr-only">(success)</span>
-                        </div>
-                        <div class="checkbox"><label><input type="checkbox">Recuérdame</label></div>
-                        <button id="signup-form-btn" type="Submit" class="btn btn-success login signup-field" data-dismiss="modal" style="margin-left:34em" onclick="changename(0)" disabled>
-                            <span class="glyphicon glyphicon-user"></span> Sign Up
-                        </button>
-                    </form>
+        <nav class="navbar navbar-default navbar-static-top main-navbar">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="{{ url_for( 'main.index') }}" style="position:absolute;left:50%;margin-left:-125px;display:block">
+                    <img class="brand-logo img-responsive" alt="Brand" src="{{ url_for('static', filename='img/entradascomlogo.png') }}">
+                </a>
+            </div>
+        </div>
+        </nav>
+        
+        <div class="carousel slide carousel-fade" data-ride="carousel">
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
                 </div>
-              
+                <div class="item">
+                </div>
+                <div class="item">
+                </div>
             </div>
         </div>
         
         
+		<!--tabs for login/signup-->
+        <div class="container">
+            <div  id="register-container" class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                <ul class="nav nav-tabs">
+                    <li id="login-li" class="active"><a data-toggle="tab" href="#login-content">Log in</a></li>
+                    <li id="signup-li"><a data-toggle="tab" href="#signup-content">Sign up</a></li>
+                </ul>
+                <!--displayed stuff for each of tabs-->
+                <div class="tab-content">
+                  <div id="login-content" class="tab-pane fade in active">
+                    <form type="login" id="login-form" class="login-field" role="form" method="post" name="Login">
+                        <div id="login-mail-div" class="form-group has-feedback">
+                            <label for="email">Email o usuario:</label>
+                            <input name="email" type="email" class="form-control" id="login-email" onchange="login(0, this.id)" aria-describedby="inputSuccess4Status" required>
+                            <span id="login-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess4Status" class="sr-only">(success)</span>
+                        </div>
+                        <div id="login-pwd-div" class="form-group has-feedback">
+                            <label for="pwd">Contraseña:</label>
+                            <input name="password" type="password" class="form-control" id="login-pwd" onchange="login(1, this.id)" aria-describedby="inputSuccess5Status" required>
+                            <span id="login-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            <span id="inputSuccess5Status" class="sr-only">(success)</span>
+                        </div>
+                        <div class="checkbox">
+                            <label><input type="checkbox"> Recuérdame</label>
+                        </div>
+                        <button id="login-form-btn" type="Submit" class="btn btn-success login login-field" data-dismiss="modal"onclick="changename(1)" disabled>
+                            <span class="glyphicon glyphicon-log-in"></span> Log in
+                        </button>
+                    </form> 
+                  </div>
+                  <div id="signup-content" class="tab-pane fade">
+                      <form action="{{ url_for('main.signup') }}" type="signup" id="signup-form" class="signup-field" role="form" method="post" name="Signup">
+                            <div id="sign-mail-div" class="form-group has-feedback">
+                                <label for="email">Email:</label>
+                                <input id="sign-mail" name="email "type="email" class="form-control" id="email" onchange="validate(0, this.id)" aria-describedby="inputSuccessStatus" required>
+                                <span id="sign-mail-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <span id="inputSuccessStatus" class="sr-only">(success)</span>
+                            </div>
+                            <div id="sign-usr-div" class="form-group has-feedback">
+                                <label for="email">Usuario:</label>
+                                <input id="sign-usr" name="username" type="text" class="form-control" id="email" onchange="validate(1, this.id)" aria-describedby="inputSuccess1Status" required>
+                                <span id="sign-usr-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <span id="inputSuccess1Status" class="sr-only">(success)</span>
+                            </div>
+                            <div id="sign-pwd-div" class="form-group has-feedback">
+                                <label for="pwd">Contraseña:</label>
+                                <input id="sign-pwd" name="password" type="password" class="form-control" id="pwd" onchange="validate(2, this.id)" aria-describedby="inputSuccess2Status" required>
+                                <span id="sign-pwd-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <span id="inputSuccess2Status" class="sr-only">(success)</span>
+                            </div>
+                            <div id="sign-pwd-confirm-div" class="form-group has-feedback">
+                                <label for="pwd-confirm">Confirmar contraseña:</label>
+                                <input id="sign-pwd-confirm" name="password" type="password" class="form-control" id="pwd-confirm" onchange="validate(3, this.id)" aria-describedby="inputSuccess3Status" required>
+                                <span id="sign-pwd-confirm-icon" class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                                <span id="inputSuccess3Status" class="sr-only">(success)</span>
+                            </div>
+                            <div class="checkbox"><label><input type="checkbox">Recuérdame</label></div>
+                            <button id="signup-form-btn" type="Submit" class="btn btn-success login signup-field" data-dismiss="modal"onclick="changename(0)" disabled>
+                                <span class="glyphicon glyphicon-user"></span> Sign Up
+                            </button>
+                        </form>
+                    </div>
+              </div>
+            </div>
+        </div>
+        <!-- Footer -->
+        <footer class="navbar navbar-fixed-bottom"> 
+            <div class="row row-mod" align="center">
+              <div class="col-lg-4" style="margin-top:10px; padding-bottom:10px">
+                <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
+                  <a href="#" style="color:black"> <i class="fa fa-facebook-square fa-3x"></i></a>
+                </div>
+                <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
+                    <a href="#" style="color:black"> <i class="fa fa-google-plus-square fa-3x"></i></a>
+                </div>
+                <div style="display:inline-block; padding-left:10px; padding-right:10px; vertical-align:middle">
+                    <a href="#" style="color:black"> <i class="fa fa-twitter-square fa-3x"></i></a>
+                </div>
+              </div>
+                <ul class='col-lg-4' style="list-style-type:none;margin:0;padding:0;">
+                    <li class="footitem"><a href="#" style="color:black"> Condiciones de uso</a></li>
+                    <li class="footitem"><a href="#" style="color:black"> Política de privacidad</a></li>
+                </ul>
+                <p>Made with <i class="fa fa-heart" aria-hidden="true"></i> in Leganés</p>
+            </div>
+        </footer>
         
+    <script src="{{ url_for('static', filename='js/login-signup.js') }}"></script>
+    <!--exec bg carousel-->
+    <script>$('.carousel').carousel();</script>
         
 	</body>
 </html>
