--- a/entradas_com/app/templates/main/index.html
+++ b/entradas_com/app/templates/main/index.html
@@ -59,9 +59,11 @@
 
                 <li>
                     <!-- Trigger the modal with a button -->
+                    <a href="{{ url_for('auth.signup') }}">
                     <button type="button" class="btn btn-yellow navbar-btn last-navbar-item login-option desktop">
-                        <a href="{{ url_for('auth.signup') }}"><span class="glyphicon glyphicon-user"></span>Entrar</a>
+                        <span class="glyphicon glyphicon-user"></span>Entrar
                     </button>
+                    </a>
                 </li>
 
                 <!-- Exit button -->
